@@ -153,24 +153,32 @@
 			<td>{TXT_NEWS_TEXT_DESCRIPTION}</td>
 		</tr>
 		<tr class="row2">
+			<td>[[NEWS_TEASER_TEXT]]</td>
+			<td>{TXT_NEWS_TEASER_TEXT_DESCRIPTION}</td>
+		</tr>
+		<tr class="row1">
 			<td>[[NEWS_AUTHOR]]</td>
 			<td>{TXT_NEWS_AUTHOR_DESCRIPTION}</td>
 		</tr>
-		<tr class="row1">
+		<tr class="row2">
 			<td>[[NEWS_LASTUPDATE]]</td>
 			<td>{TXT_NEWS_LASTUPDATE_DESCRIPTION}</td>
 		</tr>
-		<tr class="row2">
+		<tr class="row1">
 			<td>[[NEWS_SOURCE]]</td>
 			<td>{TXT_NEWS_SOURCE_DESCRIPTION}</td>
 		</tr>
-		<tr class="row1">
+		<tr class="row2">
 			<td>[[NEWS_URL]]</td>
 			<td>{TXT_NEWS_URL_DESCRIPTION}</td>
 		</tr>
-		<tr class="row2">
+		<tr class="row1">
 			<td>[[NEWS_IMAGE]]</td>
 			<td>{TXT_NEWS_IMAGE_DESCRIPTION}</td>
+		</tr>
+		<tr class="row2">
+			<td>[[NEWS_CATEGORY_NAME]]</td>
+			<td>{TXT_NEWS_CATEGORY_NAME_DESCRIPTION}</td>
 		</tr>
 	</table>
 	<br />
